fix nav jump

--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,45 @@
 *, *:before, *:after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    height: auto;
+    border: none;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+:root {
+    --hdr-h: 50vh;
 }
 head {
     height: 0;
 }
+html{
+    scroll-padding-top: var(--hdr-h);
+}
 body {
     height: 100vh;
-    margin: 0;
-    padding: 0;
     overflow: auto;
     border: unset;
 }
+
 div.row { /* us-14 */
     width: 100%;
     margin: -3rem 0 0 0;
     padding: 3rem 0 0 0;
-    border: none;
 }
 div.col-one {
-    margin: 0rem 0 3rem 0;
-    padding: 0em 0 0 0;
-    width: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--hdr-h);
 }
 div.col-two {
     border: solid black;
     border-width: 0 0 0 medium;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: var(--hdr-h) 0 0 0;
+    padding: 1.5rem 0 0 0;
 }
 main {
     padding: 1rem;
